objects/ASI_TnE_ClaimDetail__c.object
<CustomObject>
    <fields>
        <fullName>ASI_GnH_Type__c</fullName>
        <label>G&amp;H Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gifts</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>C&amp;C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_JP_TnE_Tax_Amount__c</fullName>
        <formula>IF(ASI_TnE_Taxable_Amount__c==0,0,ASI_TnE_Payment_Amount__c - ASI_TnE_Taxable_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_AD_AP__c</fullName>
        <label>A&amp;D/A&amp;P</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_AP_Remarks__c</fullName>
        <label>AP Remarks</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_A_C_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A/C Code</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>ASI_MFM_A_C_Code__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>TnE HK A/C Code</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_A_C_Code__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>MY A/C Codes, PH DF A/C Code, SG A/C Code, TH A/C Code, PH DP A/C Code, TW A/C Code</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>Travel &amp; Entertainment Claims Detail</relationshipLabel>
        <relationshipName>Travel_Entertainment_Claims_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Account_Code__c</fullName>
        <formula>IF( ASI_TnE_ClaimHeader__r.ASI_TnE_Company_Code__c == &apos;00221&apos;,  
IF( ISBLANK(ASI_TnE_Expense_Classification__r.ASI_TnE_DM_BS__c) ,  
IF(ISBLANK(ASI_TnE_Expense_Classification__r.ASI_TnE_DF_BS__c), 
ASI_TnE_ClaimHeader__r.ASI_TnE_Business_Unit__c, 
ASI_TnE_Expense_Classification__r.ASI_TnE_DF_BS__c) , 
ASI_TnE_Expense_Classification__r.ASI_TnE_DM_BS__c) ,  
IF(ASI_TnE_ClaimHeader__r.ASI_TnE_Company_Code__c == &apos;00227&apos;,  
IF( ISBLANK(ASI_TnE_Expense_Classification__r.ASI_TnE_DF_BS__c) ,  
IF(ISBLANK(ASI_TnE_Expense_Classification__r.ASI_TnE_DM_BS__c), 
ASI_TnE_ClaimHeader__r.ASI_TnE_Business_Unit__c, ASI_TnE_Expense_Classification__r.ASI_TnE_DM_BS__c) , 
ASI_TnE_Expense_Classification__r.ASI_TnE_DF_BS__c) , 
ASI_TnE_ClaimHeader__r.ASI_TnE_Business_Unit__c)) + &quot;.&quot; + ASI_TnE_Expense_Classification__r.ASI_JP_TnE_Account_Mapping__r.ASI_TnE_Account_Number__c</formula>
        <label>Account Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Account_Number__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Address_Number__c</fullName>
        <formula>ASI_TnE_Tax_ID__r.ASI_TnE_Address_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Airline__c</fullName>
        <formula>IF( ISPICKVAL( ASI_TnE_Expense_Type__c , &quot;Airline&quot;) , ASI_TnE_Amount__c*ASI_TnE_Exchange_Rate_to_VND__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Airline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Approved_Amount__c</fullName>
        <label>Approved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Attendee_Name__c</fullName>
        <label>Attendee Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Auto__c</fullName>
        <formula>IF( ISPICKVAL( ASI_TnE_Expense_Type__c , &quot;Auto&quot;) , ASI_TnE_Amount__c*ASI_TnE_Exchange_Rate_to_VND__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>AUTO EXP
Rental
Local Taxi
Mileage
Tolls
Parking</inlineHelpText>
        <label>Auto Exp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_BC__c</fullName>
        <label>BC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_BU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BU</label>
        <referenceTo>ASI_MFM_BU__c</referenceTo>
        <relationshipLabel>Travel &amp; Entertainment Claims Detail</relationshipLabel>
        <relationshipName>Travel_Entertainment_Claims_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Billed_To__c</fullName>
        <label>Billed To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>PRM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_Branch_code_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch Code + Channel</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_TnE_Branch_Channel__c.ASI_TnE_Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_TnE_Branch_Channel__c</referenceTo>
        <relationshipLabel>Travel &amp; Entertainment Claims Detail</relationshipLabel>
        <relationshipName>Travel_Entertainment_Claims_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Business_Trip_Entertainment__c</fullName>
        <formula>IF( ISPICKVAL( ASI_TnE_Expense_Type__c , &quot;Business Trip Ent&quot;) , ASI_TnE_Amount__c*ASI_TnE_Exchange_Rate_to_VND__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Trip Entertainment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_CAP_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MFM Plan</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 4) OR (2 AND 3)</booleanFilter>
            <filterItems>
                <field>ASI_MFM_Plan__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CAP Plan, CAP Plan Read-Only</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Plan__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>TW Plan, TW Plan Read-Only</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Plan__c.ASI_MFM_Status__c</field>
                <operation>equals</operation>
                <value>Final, Complete</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Plan__c.ASI_TH_TnE_Plan_Line_Count__c</field>
                <operation>greaterThan</operation>
                <value>0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Plan__c</referenceTo>
        <relationshipLabel>Travel &amp; Entertainment Claims Detail</relationshipLabel>
        <relationshipName>Travel_Entertainment_Claims_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Charge_To_Acc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Charge To (Acc)</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 2 AND 4)</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>HK Supplier</value>
            </filterItems>
            <filterItems>
                <field>Account.ASI_HK_CRM_Address__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>TW TnE Supplier</value>
            </filterItems>
            <filterItems>
                <field>Account.ASI_HK_CRM_Inactive__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Travel &amp; Entertainment Claims Detail (Charge To (Acc))</relationshipLabel>
        <relationshipName>Travel_Entertainment_Claims_Detail1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_ClaimHeader__c</fullName>
        <label>Travel &amp; Entertainment Claim</label>
        <referenceTo>ASI_TnE_ClaimHeader__c</referenceTo>
        <relationshipLabel>Travel &amp; Entertainment Claims Detail</relationshipLabel>
        <relationshipName>ASI_TnE_ClaimDetail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Claim_Detail_ID__c</fullName>
        <label>T&amp;E Claim Detail ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Client_Type__c</fullName>
        <label>Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Existing Client</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>New Client</fullName>
                </value>
                <value>
                    <fullName>Potential Client</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>Others (media/external auditor/tax agent/Etc)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_Cost_Center__c</fullName>
        <formula>LEFT(ASI_TnE_Account_Number__c, 10)</formula>
        <label>Cost Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Cross_Charging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cross-Charging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>AMD</fullName>
                </value>
                <value>
                    <fullName>AOA</fullName>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>AZN</fullName>
                </value>
                <value>
                    <fullName>BAM</fullName>
                </value>
                <value>
                    <fullName>BGN</fullName>
                </value>
                <value>
                    <fullName>BYR</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>COP</fullName>
                </value>
                <value>
                    <fullName>CZK</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>DOP</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>FJD</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>GEL</fullName>
                </value>
                <value>
                    <fullName>GHS</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>HRK</fullName>
                </value>
                <value>
                    <fullName>HUF</fullName>
                </value>
                <value>
                    <fullName>IDR</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>KES</fullName>
                </value>
                <value>
                    <fullName>KHR</fullName>
                </value>
                <value>
                    <fullName>KRW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Dept_in_Charge__c</fullName>
        <label>Dept in Charge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brand MKT</fullName>
                </value>
                <value>
                    <fullName>Trade MKT</fullName>
                </value>
                <value>
                    <fullName>Wrong Use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Destination__c</fullName>
        <label>Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Details_of_Expense__c</fullName>
        <label>Details of Expense</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Dispute__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dispute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Email_Notice__c</fullName>
        <label>Email Notice</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Travel_Entertainment_Detail_Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Exchange_Rate_to_VND__c</fullName>
        <label>Ex Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Expense_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense Category</label>
        <referenceTo>ASI_JP_TnE_Expense_Category__c</referenceTo>
        <relationshipLabel>Travel &amp; Entertainment Claims Detail (Expense Category)</relationshipLabel>
        <relationshipName>Travel_Entertainment_Claims_Detail1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Expense_Classification_Desc__c</fullName>
        <formula>ASI_TnE_Expense_Classification__r.Name</formula>
        <label>Expense Classification Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Expense_Classification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense Classification</label>
        <referenceTo>ASI_JP_TnE_Expense_Classification__c</referenceTo>
        <relationshipLabel>Travel &amp; Entertainment Claims Detail (Expense Classification)</relationshipLabel>
        <relationshipName>Travel_Entertainment_Claims_Detail1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Expense_Type__c</fullName>
        <label>Expense Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Airline</fullName>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Meal</fullName>
                </value>
                <value>
                    <fullName>Local Ent</fullName>
                </value>
                <value>
                    <fullName>Business Trip Ent</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Incidental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_Explanation_Remark_2__c</fullName>
        <label>Explanation Remark 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Explanation_Remark__c</fullName>
        <label>Explanation Remark</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_FX_Rate__c</fullName>
        <label>FX Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_GnH_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>G&amp;H Request</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_GnH_Request__c.ASI_GnH_Status__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_GnH_Request__c</referenceTo>
        <relationshipLabel>Travel &amp; Entertainment Claims Detail</relationshipLabel>
        <relationshipName>Travel_Entertainment_Claims_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_HK_Paid_Amount_Raw__c</fullName>
        <label>T&amp;E Paid Amount (Raw)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_HK_Paid_Amount__c</fullName>
        <label>T&amp;E Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_HK_Payment_Amount__c</fullName>
        <formula>ASI_TnE_Receipt_Amount__c * ASI_TnE_FX_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Hotel__c</fullName>
        <formula>IF( ISPICKVAL( ASI_TnE_Expense_Type__c , &quot;Hotel&quot;) , ASI_TnE_Amount__c*ASI_TnE_Exchange_Rate_to_VND__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hotel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Incidental__c</fullName>
        <formula>IF( ISPICKVAL( ASI_TnE_Expense_Type__c , &quot;Incidental&quot;) , ASI_TnE_Amount__c*ASI_TnE_Exchange_Rate_to_VND__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Others</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Invoice_Issuer__c</fullName>
        <label>Invoice Issuer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Is_CAPEX_Plan_Live__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is CAPEX Plan Live</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_AccountCode__c</fullName>
        <formula>IF( ASI_TnE_Expense_Classification__c != null , ASI_TnE_Expense_Classification__r.ASI_JP_TnE_Account_Mapping__r.ASI_TnE_Account_Number__c, IF( ISPICKVAL( ASI_TnE_Dept_in_Charge__c ,&apos;Trade MKT&apos; ) ,&apos;5559.700000&apos; , IF( ISPICKVAL(ASI_TnE_Dept_in_Charge__c, &apos;Brand MKT&apos;) ,&apos;5730.400000&apos;,IF( ISPICKVAL(ASI_TnE_Dept_in_Charge__c, &apos;Wrong Use&apos;),&apos;5559.710000&apos;,&apos;&apos; ))))</formula>
        <label>Account Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_AmountKRW__c</fullName>
        <formula>ROUND(ASI_TnE_Receipt_Amount__c * IF(ISNULL( ASI_TnE_FX_Rate__c) || ISBLANK(ASI_TnE_FX_Rate__c) || ASI_TnE_FX_Rate__c&lt;=0,1,ASI_TnE_FX_Rate__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount (KRW)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Brand__c</fullName>
        <formula>ASI_TnE_KR_Sub_Brand__r.ASI_KOR_Brand__r.ASI_KOR_Brand_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Budget_Co__c</fullName>
        <description>Budget Owner Co. (First 3 characters)</description>
        <label>Budget Owner Company</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Budget_Dept__c</fullName>
        <description>First 3 characters of Budget Owner Dept.</description>
        <label>Budget Owner Department</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Budget_ID__c</fullName>
        <formula>ASI_TnE_KR_Owner__r.ASI_KOR_Commission_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Business_Address__c</fullName>
        <label>Business Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Business_Name__c</fullName>
        <label>Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Business_Type__c</fullName>
        <label>Business Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Co_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Travel_Entertainment_Claims_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 3 AND 5) OR (2 AND 5) OR (1 AND 4 AND 5)</booleanFilter>
            <filterItems>
                <field>$Source.ASI_TnE_Approved_Amount__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Source.ASI_TnE_Approved_Amount__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Source.ASI_TnE_Tax_Amount__c</field>
                <operation>equals</operation>
                <value>1</value>
            </filterItems>
            <filterItems>
                <field>$Source.ASI_TnE_Tax_Amount__c</field>
                <operation>equals</operation>
                <value>2</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Wholesaler (KR), Venue (KR)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Travel &amp; Entertainment Claims Detail</relationshipLabel>
        <relationshipName>Travel_Entertainment_Claims_Detail_kr1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Detail_External_ID__c</fullName>
        <label>Detail External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_InterCompany__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InterCompany</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_IsBudget__c</fullName>
        <formula>ASI_TnE_Expense_Classification__r.ASI_JP_TnE_Account_Mapping__r.ASI_TnE_KR_TnE_Budget__c</formula>
        <label>Is T&amp;E Budget ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.ASI_KOR_Commission_Code__c</field>
                <operation>notEqual</operation>
                <value>null</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Travel_Entertainment_Claims_Detail1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Promotion_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Plan__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>KR Plan Read-Only</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Plan__c.ASI_MFM_Status__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Plan__c</referenceTo>
        <relationshipLabel>A&amp;P Claim Detail</relationshipLabel>
        <relationshipName>TnE_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Receipt_Time__c</fullName>
        <label>Receipt Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Salesman__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesman</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.ASI_KOR_User_Branch_Code__c</field>
                <operation>equals</operation>
                <valueField>$User.ASI_KOR_User_Branch_Code__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>TnE_Detail_KR_salesmanSearch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Sub_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Brand</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_KOR_Sub_Brand__c.ASI_KOR_Active_for_A_P__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_KOR_Sub_Brand__c</referenceTo>
        <relationshipLabel>Travel &amp; Entertainment Claims Detail</relationshipLabel>
        <relationshipName>Travel_Entertainment_Claims_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Sub_brand_Code__c</fullName>
        <formula>ASI_TnE_KR_Sub_Brand__r.ASI_KOR_Sub_Brand_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Where__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Where (Venue)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Venue (KR)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Travel &amp; Entertainment Claims Detail (Where)</relationshipLabel>
        <relationshipName>TnE_KR_Detail_Where</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Local_Entertainment__c</fullName>
        <formula>IF( ISPICKVAL( ASI_TnE_Expense_Type__c , &quot;Local Ent&quot;) , ASI_TnE_Amount__c*ASI_TnE_Exchange_Rate_to_VND__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Entertainment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_MCC_Group__c</fullName>
        <label>MCC Account No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>